--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
 
-                <a class="navbar-brand" href="#page-top">EM</a>
+                <a class="navbar-brand" href="#page-top">Ethan Manis</a>
 
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
@@ -57,7 +57,7 @@
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
 
-                        <h1 class="mx-auto my-0 text-uppercase">Ethan</h1>
+                        <h1 class="mx-auto my-0 text-uppercase">Ethan Manis</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">
                             Software Engineer, Database Designer, Veteran,
                             <br>
