--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
 
-                <a class="navbar-brand" href="#page-top">Ethan Manis</a>
+                <a class="navbar-brand" href="#page-top">E. M.</a>
 
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
